--- a/templates/home.html
+++ b/templates/home.html
@@ -2,26 +2,35 @@
 {% load static %}
 
   {% block body  %}
-
-  	<!-- hero area -->
-
-	<!-- end hero area -->
-
-	
-
-
-     <div class="product-section mt-150 mb-150">
+    <div class="search-area">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-8 offset-lg-2 text-center">
-					<div class="section-title">	
-						<h3><span class="orange-text">Our</span> Products</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p>
+				<div class="col-lg-12">
+					<span class="close-btn"><i class="fas fa-window-close"></i></span>
+					<div class="search-bar">
+						<div class="search-bar-tablecell">
+							<h3>Search For:</h3>
+							<input type="text" placeholder="Keywords">
+							<button type="submit">Search <i class="fas fa-search"></i></button>
+						</div>
 					</div>
 				</div>
 			</div>
-<!--here-->
-
+		</div>
+	</div>
+	<!-- end search arewa -->
+	
+	<!-- breadcrumb-section -->
+	<div class="breadcrumb-section breadcrumb-bg">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8 offset-lg-2 text-center">
+				
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end breadcrumb section -->
 			<div class="row">
           {% for product in products %}
 				<div class="col-lg-4 col-md-6 text-center">
