--- a/templates/login.html
+++ b/templates/login.html
@@ -26,6 +26,7 @@
       <input type="password" placeholder="password" name="password" />
  
       <button> login </button>
+      <p class="message">forgot password? <a href="{% url 'password_reset' %}">here</a></p>
       <p class="message">have account? <a href="{% url 'register' %}">register here</a></p>
     </form>
  
