--- a/templates/cart.html
+++ b/templates/cart.html
@@ -7,7 +7,7 @@
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
-						<p>Fresh and Organic</p>
+					
 						<h1>Cart</h1>
 					</div>
 				</div>
@@ -34,30 +34,16 @@
 								</tr>
 							</thead>
 							<tbody>
-								<tr class="table-body-row">
+							{% for item in items %}
+							<tr class="table-body-row">
 									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
-									<td class="product-image"><img src="{% static 'assets/img/products/product-img-1.jpg' %}" alt="Strawberry"></td>
-									<td class="product-name">Strawberry</td>
-									<td class="product-price">$85</td>
-									<td class="product-quantity"><input type="number" value="1" min="1"></td>
-									<td class="product-total">$85</td>
+									<td class="product-image"><img src="{{item.product.image.url }}" alt="Strawberry"></td>
+									<td class="product-name">{{ item.product.name}}</td>
+									<td class="product-price">${{item.product.price}}</td>
+									<td class="product-quantity">{{item.quantity}}</td>
+									<td class="product-total">${{total}}</td>
 								</tr>
-								<tr class="table-body-row">
-									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
-									<td class="product-image"><img src="{% static 'assets/img/products/product-img-2.jpg' %}" alt="Berry"></td>
-									<td class="product-name">Berry</td>
-									<td class="product-price">$70</td>
-									<td class="product-quantity"><input type="number" value="1" min="1"></td>
-									<td class="product-total">$70</td>
-								</tr>
-								<tr class="table-body-row">
-									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
-									<td class="product-image"><img src="{% static 'assets/img/products/product-img-3.jpg' %}" alt="Lemon"></td>
-									<td class="product-name">Lemon</td>
-									<td class="product-price">$35</td>
-									<td class="product-quantity"><input type="number" value="1" min="1"></td>
-									<td class="product-total">$35</td>
-								</tr>
+							{% endfor %}
 							</tbody>
 						</table>
 					</div>
