--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 	<title>Fruitkha</title>
 
 	<!-- favicon -->
-	<link rel="shortcut icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
+	<link rel="shortcut icon" type="image/png" href="{% static 'assets/img/what.png' %}">
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
@@ -60,7 +60,7 @@
 						<!-- logo -->
 						<div class="site-logo">
 							<a href="{% url 'home' %}">
-								<img src="{% static 'assets/img/logo.png' %}" alt="">
+								<img src="{% static 'assets/img/what.png' %}" alt="">
 							</a>
 						</div>
 						<!-- logo -->
