--- a/templates/cart.html
+++ b/templates/cart.html
@@ -36,12 +36,12 @@
 							<tbody>
 							{% for item in items %}
 							<tr class="table-body-row">
-									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
+									<td class="product-remove"><a href="{% url 'remove' item.id %}"><i class="far fa-window-close"></i></a></td>
 									<td class="product-image"><img src="{{item.product.image.url }}" alt="Strawberry"></td>
 									<td class="product-name">{{ item.product.name}}</td>
 									<td class="product-price">${{item.product.price}}</td>
 									<td class="product-quantity">{{item.quantity}}</td>
-									<td class="product-total">${{total}}</td>
+									<td class="product-total">${{item.total}}</td>
 								</tr>
 							{% endfor %}
 							</tbody>
@@ -60,32 +60,13 @@
 							</thead>
 							<tbody>
 								<tr class="total-data">
-									<td><strong>Subtotal: </strong></td>
-									<td>$190</td>
-								</tr>
-								<tr class="total-data">
-									<td><strong>Shipping: </strong></td>
-									<td>$45</td>
-								</tr>
-								<tr class="total-data">
-									<td><strong>Total: </strong></td>
-									<td>$235</td>
+									<td><strong>total: </strong></td>
+									<td>{{subtotal}}</td>
 								</tr>
 							</tbody>
 						</table>
 						<div class="cart-buttons">
-							<a href="cart.html" class="boxed-btn">Update Cart</a>
-							<a href="checkout.html" class="boxed-btn black">Check Out</a>
-						</div>
-					</div>
-
-					<div class="coupon-section">
-						<h3>Apply Coupon</h3>
-						<div class="coupon-form-wrap">
-							<form action="index.html">
-								<p><input type="text" placeholder="Coupon"></p>
-								<p><input type="submit" value="Apply"></p>
-							</form>
+							<a href="#" class="boxed-btn black">Check Out</a>
 						</div>
 					</div>
 				</div>
