--- a/static/index.css
+++ b/static/index.css
@@ -214,7 +214,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     border: 1px solid #76b852;
     cursor: pointer;
     padding: 0.9em;
-    -webkit-appearance: none;
     width: 100%;
     margin: 2em 0;
     letter-spacing: 4px;
@@ -761,3 +760,13 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
       padding: 1em 0 0;
     }
   }
+
+.error-messange{
+  color: red;
+  font-size: 14px;
+}
+
+li {
+  color: red;
+  font-size: 14px;
+}
