--- a/templates/register.html
+++ b/templates/register.html
@@ -3,59 +3,100 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>sign up </title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- Custom Theme files -->
-<link href="{% static 'index.css' %}" rel="stylesheet" type="text/css" media="all" />
-<!-- //Custom Theme files -->
-<!-- web font -->
-<link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
-<!-- //web font -->
+    <title>Sign Up</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <script type="application/x-javascript">
+        addEventListener("load", function() {
+            setTimeout(hideURLbar, 0);
+        }, false);
+
+        function hideURLbar() {
+            window.scrollTo(0, 1);
+        }
+    </script>
+    <!-- Custom Theme files -->
+    <link href="{% static 'index.css' %}" rel="stylesheet" type="text/css" media="all" />
+    <!-- Web font -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
 </head>
 <body>
-	<!-- main -->
-	<div class="main-w3layouts wrapper">
-	
-		<div class="main-agileinfo">
-			<div class="agileits-top">
-		
-			
-				<form action="" method="post">
-				{% csrf_token %}
-				  {{form|crispy}}
-
-					<div class="wthree-text">
-						<label class="anim">
-							<input type="checkbox" class="checkbox" required>
-							<span>I Agree To The Terms & Conditions</span>
-						</label>
-						<div class="clear"> </div>
+    <!-- main -->
+    <div class="main-w3layouts wrapper">
+        <div class="main-agileinfo">
+            <div class="agileits-top">
+                <form action="{% url 'register' %}" method="post">
+                    {% csrf_token %}
+					<div class="error-messange" style="color: red;">
+						{{ form.non_field_errors }}
 					</div>
-					<input type="submit" value="SIGNUP">
-				</form>
-				<p>Don't have an Account? <a href="{% url 'login' %}"> Login Now!</a></p>
-			</div>
-		</div>
-		<!-- copyright -->
-		<div class="colorlibcopy-agile">
-			<p>© 2018 Colorlib Signup Form. All rights reserved | Design by <a href="https://colorlib.com/" target="_blank">Colorlib</a></p>
-		</div>
-		<!-- //copyright -->
-		<ul class="colorlib-bubbles">
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
-	</div>
-	<!-- //main -->
+                    
+                    
+                    <div class="form-group">
+                        {{ form.username.label_tag }}
+                        {{ form.username }}
+						<div class="error-messange" style="color: red;">
+							{{ form.username.errors }}
+						</div>
+                        
+                    </div>
+                    
+                    <div class="form-group">
+                        {{ form.email.label_tag }}
+                        {{ form.email }}
+						<div class="error-messange" style="color: red;">
+							{{ form.email.errors }}
+						</div>
+                      
+                    </div>
+                    
+                    <div class="form-group">
+                        {{ form.password1.label_tag }}
+                        {{ form.password1 }}
+						<div class="error-messange" style="color: red;">
+							{{ form.password1.errors }}
+						</div>
+                    </div>
+                    
+                    <div class="form-group">
+                        {{ form.password2.label_tag }}
+                        {{ form.password2 }}
+						<div class="error-messange" style="color: red;">
+							{{ form.password2.errors }}
+						</div>
+                    </div>
+                    
+                    <div class="wthree-text">
+                        <label class="anim">
+                            <input type="checkbox" class="checkbox" required>
+                            <span>I Agree To The Terms & Conditions</span>
+                        </label>
+                        <div class="clear"></div>
+                    </div>
+                    
+                    <input type="submit" value="SIGN UP">
+                </form>
+                <p>Don't have an Account? <a href="{% url 'login' %}">Login Now!</a></p>
+            </div>
+        </div>
+        <!-- copyright -->
+        <div class="colorlibcopy-agile">
+            <p>© 2018 Colorlib Signup Form. All rights reserved | Design by <a href="https://colorlib.com/" target="_blank">Colorlib</a></p>
+        </div>
+        <!-- //copyright -->
+        <ul class="colorlib-bubbles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+    <!-- //main -->
 </body>
 </html>
