--- a/templates/base.html
+++ b/templates/base.html
@@ -80,9 +80,13 @@
 										<a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
 									</div>
 								</li>
-								<li> <a href="{% url 'login' %}">login </li>
+								{% if request.user.is_authenticated %}
+								
 								<li> <a href="{% url 'logout' %}">logout</li>
+									{% else %}
+									<li> <a href="{% url 'login' %}">login </li>
 								<li><a href="{% url 'register' %}">register</li>
+									{% endif %}
 							</ul>
 						</nav>
 						<a class="mobile-show search-bar-icon" href="#"><i class="fas fa-search"></i></a>
@@ -139,33 +143,7 @@
 <!--down-->
 
 
-<!-- logo carousel -->
-<div class="logo-carousel-section">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="logo-carousel-inner">
-					<div class="single-logo-item">
-						<img src="{% static 'assets/img/company-logos/1.png' %}" alt="">
-					</div>
-					<div class="single-logo-item">
-						<img src="{% static 'assets/img/company-logos/2.png' %}" alt="">
-					</div>
-					<div class="single-logo-item">
-						<img src="{% static 'assets/img/company-logos/3.png' %}" alt="">
-					</div>
-					<div class="single-logo-item">
-						<img src="{ static 'assets/img/company-logos/4.png' %}" alt="">
-					</div>
-					<div class="single-logo-item">
-						<img src="{% static 'assets/img/company-logos/5.png' %}" alt="">
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- end logo carousel -->
+
 <!-- footer -->
 <div class="footer-area">
 	<div class="container">
@@ -180,9 +158,9 @@
 				<div class="footer-box get-in-touch">
 					<h2 class="widget-title">Get in Touch</h2>
 					<ul>
-						<li>34/8, East Hukupara, Gifirtok, Sadan.</li>
-						<li>support@fruitkha.com</li>
-						<li>+00 111 222 3333</li>
+						<li>24/7 support for anything </li>
+						<li>support@lewis.com</li>
+						<li>+254 740771735</li>
 					</ul>
 				</div>
 			</div>
@@ -194,8 +172,9 @@
 				<div class="footer-box subscribe">
 					<h2 class="widget-title">Subscribe</h2>
 					<p>Subscribe to our mailing list to get the latest updates.</p>
-					<form action="index.html">
-						<input type="email" placeholder="Email">
+					<form action="{% url 'subscribe' %}" method="post">
+						{% csrf_token %}
+						<input type="email" placeholder="Email" name="email">
 						<button type="submit"><i class="fas fa-paper-plane"></i></button>
 					</form>
 				</div>
