--- a/templates/home.html
+++ b/templates/home.html
@@ -52,6 +52,27 @@
 						</div>
 					</div>
 				{% endfor %}
+				<!--add here navigation links -->
+			</div>
+
+			<div class="pagination" style="text-align: center; font-size: larger; margin: auto; justify-content: space-around;">
+				<span class="step-links">
+					{% if products.has_previous %}
+						<a href="?page=1">&laquo; first</a>
+						<a href="?page={{ products.previous_page_number }}">previous</a>
+					{% endif %}
+		
+					<span class="current">
+						Page {{ products.number }} of {{ products.paginator.num_pages }}.
+					</span>
+		
+					{% if products.has_next %}
+						<a href="?page={{ products.next_page_number }}">next</a>
+						<a href="?page={{ products.paginator.num_pages }}">last &raquo;</a>
+					{% endif %}
+				</span>
+			</div>
+				<!--/end here-->
 				</div>
 			</div>
             </div>
