--- a/templates/register.html
+++ b/templates/register.html
@@ -76,7 +76,7 @@
                     
                     <input type="submit" value="SIGN UP">
                 </form>
-                <p>Don't have an Account? <a href="{% url 'login' %}">Login Now!</a></p>
+                <p>have an Account? <a href="{% url 'login' %}">Login Now!</a></p>
             </div>
         </div>
         <!-- copyright -->
