add tocart done

--- a/templates/base.html
+++ b/templates/base.html
@@ -257,6 +257,7 @@
 <script src="{% static 'assets/js/sticker.js' %}"></script>
 <!-- main js -->
 <script src="{% static 'assets/js/main.js' %}"></script>
+<script src="{% static 'ajax.js' %}"></script>
 
 </body>
 </html>
