--- a/templates/home.html
+++ b/templates/home.html
@@ -1,145 +1,161 @@
 {% extends "base.html" %}
 {% load static %}
 
-  {% block body  %}
-			<div class="row">
-				{% for product in products %}
-					<div class="col-lg-4 col-md-6 text-center">
-						<div class="single-product-item">
-							<div class="product-image">
-								<a href="{% url 'single' product.id %}">
-									<img  style="height: 270px; width: auto;" src="{{ product.image.url }}" alt="">
-								</a>
-							</div>
-							<h3>{{ product.name }}</h3>
-							<p class="product-price"><span>Per Kg</span> {{ product.price }}$</p>
-							<!--make this a form please-->
-							<form method="post" action="{% url 'addtocart' %}">
-								{% csrf_token %}
-								<input type="hidden" name="number" value="1">
-								<input type="hidden" name="id" value="{{product.id}}">
-								<button class="cart-btn btn-lg" type="submit">add to cart</button>
-							</form>
-						</div>
-					</div>
-				{% endfor %}
-				<!--add here navigation links -->
+{% block body %}
+<div class="row">
+	{% for product in products %}
+	<div class="col-lg-4 col-md-6 text-center">
+		<div class="single-product-item">
+			<div class="product-image">
+				<a href="{% url 'single' product.id %}">
+					<img style="height: 270px; width: auto;" src="{{ product.image.url }}" alt="">
+				</a>
 			</div>
-
-			<div class="pagination" style="text-align: center; font-size: larger; margin: auto; justify-content: space-around;">
-				<span class="step-links">
-					{% if products.has_previous %}
-						<a href="?page=1">&laquo; first</a>
-						<a href="?page={{ products.previous_page_number }}">previous</a>
-					{% endif %}
-		
-					<span class="current">
-						Page {{ products.number }} of {{ products.paginator.num_pages }}.
-					</span>
-		
-					{% if products.has_next %}
-						<a href="?page={{ products.next_page_number }}">next</a>
-						<a href="?page={{ products.paginator.num_pages }}">last &raquo;</a>
-					{% endif %}
-				</span>
-			</div>
-				<!--/end here-->
-				</div>
-			</div>
-            </div>
+			<h3>{{ product.name }}</h3>
+			<p class="product-price"><span>Per Kg</span> {{ product.price }}$</p>
+			<!--make this a form please-->
+			<form class="add-to-cart-form" method="post" action="{% url 'addtocart' %}">
+				{% csrf_token %}
+				<input type="hidden" name="number" value="1">
+				<input type="hidden" name="id" value="{{product.id}}">
+				<button class="cart-btn btn-lg  js-addtocart-button" type="submit">add to cart</button>
+			</form>
 		</div>
-	<!-- end product section -->
-	<!-- testimonail-section -->
-	<!-- advertisement section -->
-	<div class="abt-section mb-150">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-md-12">
-					<div class="abt-bg">
-						<a href="https://www.youtube.com/watch?v=DBLlFWYcIGQ" class="video-play-btn popup-youtube"><i class="fas fa-play"></i></a>
-					</div>
+	</div>
+	{% endfor %}
+	<!--add here navigation links -->
+</div>
+
+<div class="pagination" style="text-align: center; font-size: larger; margin: auto; justify-content: space-around;">
+	<span class="step-links">
+		{% if products.has_previous %}
+		<a href="?page=1">&laquo; first</a>
+		<a href="?page={{ products.previous_page_number }}">previous</a>
+		{% endif %}
+
+		<span class="current">
+			Page {{ products.number }} of {{ products.paginator.num_pages }}.
+		</span>
+
+		{% if products.has_next %}
+		<a href="?page={{ products.next_page_number }}">next</a>
+		<a href="?page={{ products.paginator.num_pages }}">last &raquo;</a>
+		{% endif %}
+	</span>
+</div>
+<!--/end here-->
+</div>
+</div>
+</div>
+</div>
+<!-- end product section -->
+<!-- testimonail-section -->
+<!-- advertisement section -->
+<div class="abt-section mb-150">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-6 col-md-12">
+				<div class="abt-bg">
+					<a href="https://www.youtube.com/watch?v=DBLlFWYcIGQ" class="video-play-btn popup-youtube"><i
+							class="fas fa-play"></i></a>
 				</div>
-				<div class="col-lg-6 col-md-12">
-					<div class="abt-text">
-						<p class="top-sub">Since Year 1999</p>
-						<h2>We are <span class="orange-text">Fruitkha</span></h2>
-						<p>Etiam vulputate ut augue vel sodales. In sollicitudin neque et massa porttitor vestibulum ac vel nisi. Vestibulum placerat eget dolor sit amet posuere. In ut dolor aliquet, aliquet sapien sed, interdum velit. Nam eu molestie lorem.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente facilis illo repellat veritatis minus, et labore minima mollitia qui ducimus.</p>
-						<a href="about.html" class="boxed-btn mt-4">know more</a>
-					</div>
+			</div>
+			<div class="col-lg-6 col-md-12">
+				<div class="abt-text">
+					<p class="top-sub">Since Year 1999</p>
+					<h2>We are <span class="orange-text">Fruitkha</span></h2>
+					<p>Etiam vulputate ut augue vel sodales. In sollicitudin neque et massa porttitor vestibulum ac vel
+						nisi. Vestibulum placerat eget dolor sit amet posuere. In ut dolor aliquet, aliquet sapien sed,
+						interdum velit. Nam eu molestie lorem.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente facilis illo repellat
+						veritatis minus, et labore minima mollitia qui ducimus.</p>
+					<a href="about.html" class="boxed-btn mt-4">know more</a>
 				</div>
 			</div>
 		</div>
 	</div>
-	<!-- end advertisement section -->
-	
+</div>
+<!-- end advertisement section -->
 
-	<!-- latest news -->
-	<div class="latest-news pt-150 pb-150">
-		<div class="container">
 
-			<div class="row">
-				<div class="col-lg-8 offset-lg-2 text-center">
-					<div class="section-title">	
-						<h3><span class="orange-text">Our</span> News</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p>
-					</div>
-				</div>
-			</div>
+<!-- latest news -->
+<div class="latest-news pt-150 pb-150">
+	<div class="container">
 
-			<div class="row">
-				<div class="col-lg-4 col-md-6">
-					<div class="single-latest-news">
-						<a href="single-news.html"><div class="latest-news-bg news-bg-1"></div></a>
-						<div class="news-text-box">
-							<h3><a href="single-news.html">You will vainly look for fruit on it in autumn.</a></h3>
-							<p class="blog-meta">
-								<span class="author"><i class="fas fa-user"></i> Admin</span>
-								<span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
-							</p>
-							<p class="excerpt">Vivamus lacus enim, pulvinar vel nulla sed, scelerisque rhoncus nisi. Praesent vitae mattis nunc, egestas viverra eros.</p>
-							<a href="single-news.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="single-latest-news">
-						<a href="single-news.html"><div class="latest-news-bg news-bg-2"></div></a>
-						<div class="news-text-box">
-							<h3><a href="single-news.html">A man's worth has its season, like tomato.</a></h3>
-							<p class="blog-meta">
-								<span class="author"><i class="fas fa-user"></i> Admin</span>
-								<span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
-							</p>
-							<p class="excerpt">Vivamus lacus enim, pulvinar vel nulla sed, scelerisque rhoncus nisi. Praesent vitae mattis nunc, egestas viverra eros.</p>
-							<a href="single-news.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0">
-					<div class="single-latest-news">
-						<a href="single-news.html"><div class="latest-news-bg news-bg-3"></div></a>
-						<div class="news-text-box">
-							<h3><a href="single-news.html">Good thoughts bear good fresh juicy fruit.</a></h3>
-							<p class="blog-meta">
-								<span class="author"><i class="fas fa-user"></i> Admin</span>
-								<span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
-							</p>
-							<p class="excerpt">Vivamus lacus enim, pulvinar vel nulla sed, scelerisque rhoncus nisi. Praesent vitae mattis nunc, egestas viverra eros.</p>
-							<a href="single-news.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<a href="news.html" class="boxed-btn">More News</a>
+		<div class="row">
+			<div class="col-lg-8 offset-lg-2 text-center">
+				<div class="section-title">
+					<h3><span class="orange-text">Our</span> News</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet
+						beatae optio.</p>
 				</div>
 			</div>
 		</div>
+
+		<div class="row">
+			<div class="col-lg-4 col-md-6">
+				<div class="single-latest-news">
+					<a href="single-news.html">
+						<div class="latest-news-bg news-bg-1"></div>
+					</a>
+					<div class="news-text-box">
+						<h3><a href="single-news.html">You will vainly look for fruit on it in autumn.</a></h3>
+						<p class="blog-meta">
+							<span class="author"><i class="fas fa-user"></i> Admin</span>
+							<span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
+						</p>
+						<p class="excerpt">Vivamus lacus enim, pulvinar vel nulla sed, scelerisque rhoncus nisi.
+							Praesent vitae mattis nunc, egestas viverra eros.</p>
+						<a href="single-news.html" class="read-more-btn">read more <i
+								class="fas fa-angle-right"></i></a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<div class="single-latest-news">
+					<a href="single-news.html">
+						<div class="latest-news-bg news-bg-2"></div>
+					</a>
+					<div class="news-text-box">
+						<h3><a href="single-news.html">A man's worth has its season, like tomato.</a></h3>
+						<p class="blog-meta">
+							<span class="author"><i class="fas fa-user"></i> Admin</span>
+							<span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
+						</p>
+						<p class="excerpt">Vivamus lacus enim, pulvinar vel nulla sed, scelerisque rhoncus nisi.
+							Praesent vitae mattis nunc, egestas viverra eros.</p>
+						<a href="single-news.html" class="read-more-btn">read more <i
+								class="fas fa-angle-right"></i></a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0">
+				<div class="single-latest-news">
+					<a href="single-news.html">
+						<div class="latest-news-bg news-bg-3"></div>
+					</a>
+					<div class="news-text-box">
+						<h3><a href="single-news.html">Good thoughts bear good fresh juicy fruit.</a></h3>
+						<p class="blog-meta">
+							<span class="author"><i class="fas fa-user"></i> Admin</span>
+							<span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
+						</p>
+						<p class="excerpt">Vivamus lacus enim, pulvinar vel nulla sed, scelerisque rhoncus nisi.
+							Praesent vitae mattis nunc, egestas viverra eros.</p>
+						<a href="single-news.html" class="read-more-btn">read more <i
+								class="fas fa-angle-right"></i></a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12 text-center">
+				<a href="news.html" class="boxed-btn">More News</a>
+			</div>
+		</div>
 	</div>
-	<!-- end latest news -->
+</div>
+<!-- end latest news -->
 
 
-{% endblock  %} 
-   
+{% endblock %}
