--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,8 @@
 	<link rel="stylesheet" href="{% static 'assets/css/responsive.css' %}">
 	<!-- add to cart messange styles -->
 	<link rel="stylesheet" href="{% static 'addtocartmessange.css' %}">
+	{% block head %}
+	{% endblock %}
 </head>
 <body>
 	
