--- a/templates/cart.html
+++ b/templates/cart.html
@@ -51,7 +51,7 @@
 							</tbody>
 						</table>
 						<div class="cart-buttons">
-							<a href="#" class="boxed-btn black">Check Out</a>
+							<a href="{% url 'checkout' %}" class="boxed-btn black">Check Out</a>
 						</div>
 					</div>
 				</div>
