--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>Fruitkha</title>
+	<title>Store</title>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/png" href="{% static 'assets/img/favicon.svg' %}">
@@ -34,6 +34,9 @@
 	<!-- responsive -->
 	<link rel="stylesheet" href="{% static 'assets/css/responsive.css' %}">
 	<!-- add to cart messange styles -->
+	 <!-- whatapp static ones-->
+	  <link rel="stylesheet" href="{% static 'whatapp.css' %}">
+
 	{% block head %}
 	{% endblock %}
 </head>
@@ -186,7 +189,7 @@
 			<div class="col-lg-3 col-md-6">
 				<div class="footer-box about-widget">
 					<h2 class="widget-title">About us</h2>
-					<p>Ut enim ad minim veniam perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
+					<p>We sell shoes and other related goods around kenya .</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-md-6">
@@ -194,7 +197,7 @@
 					<h2 class="widget-title">Get in Touch</h2>
 					<ul>
 						<li>24/7 support for anything </li>
-						<li>support@lewis.com</li>
+						<li>lewiskinyuanjue.ke@gmail.com</li>
 						<li>+254 740771735</li>
 					</ul>
 				</div>
@@ -224,7 +227,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-md-12">
-				<p>Copyrights &copy; 2019 - <a href="https://imransdesign.com/">Imran Hossain</a>,  All Rights Reserved.</p>
+				<p>Copyrights &copy; 2019 - <a href="">lewis njue</a>,  All Rights Reserved.</p>
 			</div>
 			<div class="col-lg-6 text-right col-md-12">
 				<div class="social-icons">
@@ -232,7 +235,7 @@
 						<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 						<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
 						<li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-						<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/lewis-njue-03563b2b3/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
 						<li><a href="#" target="_blank"><i class="fab fa-dribbble"></i></a></li>
 					</ul>
 				</div>
@@ -263,7 +266,7 @@
 <!-- main js -->
 <script src="{% static 'assets/js/main.js' %}"></script>
 <script src="{% static 'ajax.js' %}"></script>
-
+<script src="{% static 'whatapp.js' %}"></script>
 </body>
 </html>
 
