--- a/templates/cart.html
+++ b/templates/cart.html
@@ -59,6 +59,7 @@
 		</div>
 	</div>
 	<!-- end cart -->
+		<button class="whatsapp-button" onclick="openWhatsApp()">Start WhatsApp Chat</button>
 
 	
 {% endblock %}
