--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -191,7 +191,7 @@ margin-top:-5px;
 			</form>
 		</div>
 	</div>
-
+	<button class="whatsapp-button" onclick="openWhatsApp()">Start WhatsApp Chat</button>
 
 </body>
 </html>
