--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -30,8 +30,8 @@
 				<div class="col-md-7">
 					<div class="single-product-content">
 						<h3>{{ product.name }}</h3>
-						<p class="single-product-pricing"><span>Per Kg ${{product.price}}</span> </p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta sint dignissimos, rem commodi cum voluptatem quae reprehenderit repudiandae ea tempora incidunt ipsa, quisquam animi perferendis eos eum modi! Tempora, earum.</p>
+						<p class="single-product-pricing"><span>ksh {{product.price}}</span> </p>
+						<p></p>
 						<!--here bro -->
 						<!--/end here-->
 						<div class="single-product-form" style="width : 48%">
