updated home page styles

--- a/static/assets/css/responsive.css
+++ b/static/assets/css/responsive.css
@@ -203,6 +203,10 @@
 
 /* Mobile Layout: 320px. */
 @media only screen and (max-width: 767px) {
+	.row{
+		display: grid;
+		grid-template-columns: 2;
+	}
 
 	.site-logo img {
 	    max-width: 150px;
