--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,7 @@
 	<!-- add to cart messange styles -->
 	 <!-- whatapp static ones-->
 	  <link rel="stylesheet" href="{% static 'whatapp.css' %}">
+	  <link rel="stylesheet" href="{% static 'home/main.css' %}">
 
 	{% block head %}
 	{% endblock %}
