--- a/templates/home.html
+++ b/templates/home.html
@@ -5,17 +5,18 @@
 {% endblock %}
 
 {% block body %}
-<div class="row">
-	{% for product in products %}
-	<div class="col-lg-4 col-md-6 text-center">
-		<div class="single-product-item">
-			<div class="product-image">
+<div class="container-grid">
+{% for product in products %}
+<div class="container-whole">
+		<div class="container-image">
 				<a href="{% url 'single' product.id %}">
-					<img style="height: 270px; width: auto;" src="{{ product.image.url }}" alt="">
+					<img  src="{{ product.image.url }}" alt="">
 				</a>
-			</div>
+		
+		</div>
+		<div class="container-add">
 			<h3>{{ product.name }}</h3>
-			<p class="product-price"><span></span> {{ product.price }}ksh</p>
+			<p  {{ product.price }}ksh</p>
 			<form class="add-to-cart-form" method="post" action="{% url 'addtocart' %}">
 				{% csrf_token %}
 				<input type="hidden" name="number" value="1">
@@ -24,6 +25,7 @@
 			</form>
 		</div>
 	</div>
+		
 	{% endfor %}
 </div>
 
